# Atlas-pullrequest

./: .gitignore  .prettierrc  CMakeLists.txt  README  cenv.cpp  database.cpp  invites.cpp  main.cpp  messaging.cpp  server.cpp
client/: .gitignore  next.config.ts  package-lock.json  package.json
client/src/app/: components.tsx  layout.tsx  page.tsx
client/src/app/bubble/: layout.tsx  page.tsx
client/src/app/bubble/server/[id]/: page.tsx
client/src/app/invite/: invite-client.tsx  page.tsx
client/src/app/invite/invalid_code/: page.tsx
client/src/app/logout/: page.tsx
client/src/app/settings/: page.tsx
client/src/stylesheets/scss/: chat.module.scss  components.module.scss  invite.module.scss  login.module.scss  settings.module.scss
client/src/typescript/: env.ts  eventsManager.ts  interfaces.ts  user.ts  websocket.ts
headers/: abstract.hpp  cenv.hpp  database.hpp  messaging.hpp
